# wie-hoch-dachtraufe

./: .gitignore  Makefile  README.md  app.py  download_files.py  i18n.py  model.html  pyproject.toml  swissbuildings3d_etl.py  utilities.py
locale/: messages.pot
locale/de/LC_MESSAGES/: messages.mo  messages.po
locale/fr/LC_MESSAGES/: messages.mo  messages.po
locale/it/LC_MESSAGES/: messages.mo  messages.po
streamlit_3d/: __init__.py  index.html
