[project]
name = "wie-hoch-dachtraufe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fiona>=1.10.1",
    "nest-asyncio>=1.6.0",
    "plotly>=5.24.1",
    "pyproj>=3.7.0",
    "pyvista>=0.44.2",
    "requests>=2.32.3",
    "shapely>=2.0.6",
    "streamlit>=1.41.1",
    "streamlit-folium>=0.24.0",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
